--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,17 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidHomeworkTest"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".MyNotesActivity"
+            android:name=".l_17.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".l_16.MyNotesActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".SplashScreenActivity"
-            android:exported="true" >
+            android:name=".l_16.SplashScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,19 +32,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ThirdOnboardingActivity"
+            android:name=".l_16.ThirdOnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".SecondOnboardingActivity"
+            android:name=".l_16.SecondOnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".FirstOnboardingActivity"
-            android:exported="true" >
-        </activity>
+            android:name=".l_16.FirstOnboardingActivity"
+            android:exported="true"></activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="false" >
-        </activity>
+            android:name=".l_16.MainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
