--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,23 +7,13 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="My App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidHomeworkTest"
         tools:targetApi="31">
         <activity
             android:name=".l_17.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".l_16.MyNotesActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".l_16.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,18 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".l_16.ThirdOnboardingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".l_16.SecondOnboardingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".l_16.FirstOnboardingActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".l_16.MainActivity"
-            android:exported="false"></activity>
+
+
+
+
+
     </application>
 
 </manifest>
